--- a/.github/workflows/publish_module_on_pypi.yml
+++ b/.github/workflows/publish_module_on_pypi.yml
@@ -35,8 +35,7 @@ jobs:
           pip install setuptools wheel twine build
 
       - name: Build the package using pyproject.toml
-        run: |
-          python -m build
+        run: python setup.py sdist bdist_wheel
 
       - name: Upload to PyPI
         env:
